# XVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/xvm/: xvm.h
src/: main.c  xvm.c  xvm_crypto.c  xvm_disasm.c  xvm_fast_hash.c  xvm_yara.c
